---
title: Diagrama de entidades
---
erDiagram
    User{
        string id PK
        string login
        string password
        string role
        bool enabled
        bool passwordPwened
    }

    Passwords{
        sting id PK
        str filter_id FK
        string user_id FK
        string login
        string password
        string size
        bool status
        datetime lastUse
        string whereUserd
    }

    Filters{
        string id PK
        string name
    }

    Logs{
        string id PK
        string password_id FK
        dateTime lastUse
        string ip
        string cidate
        string estado
        string pais
        string ASN
        string OS
        string browser
        string version
    }

    User ||--o{ Passwords: has
    Passwords ||--o{Filters: has
    Passwords ||--o{ Logs: has
